--- a/src/components/Window/styles.scss
+++ b/src/components/Window/styles.scss
@@ -107,6 +107,27 @@ body {
         #windowContainer {
             height: calc(100vh - 32px);
             margin-top: 32px;
+
+            #pageWrapper {
+                height: 100%;
+                
+                &.center {
+
+                    #pageContainer {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                    }
+
+                }
+
+                #pageContainer {
+                    height: 100%;
+                }
+
+            }
+
         }
     
     }
